# cmsc408-course-admin

./: .env.sample  README.md  pyproject.toml  test.html
assets/: CMSC408-id-icon.snagx
docker/: Makefile  docker-compose.yml
fa2023/: README.md
fa2023/abet/: Makefile  cmsc508-fa2023-indicators.html  cmsc508-fa2023-indicators.qmd  cmsc508-fa2023-indicators.tex  pdftool.py  pyproject.toml  sl03.qmd  slo1.html  slo1.qmd  slo2.html  slo2.qmd  slo3.html  slo3.qmd  slo4.html  slo4.qmd  slo5.qmd  slo6.html  slo6.qmd  test1.qmd
fa2023/abet/precious/: CMSC 508 - Fall 2022 - SLO1 - Leonard.docx  CMSC 508 - Fall 2022 - SLO6 - Leonard -NEW.docx  README.md  cmsc508-fa2023-outcomes-official-2023-11-11.csv
fa2023/lectures/: .cnvsapi  .utils  Makefile  README.md  _lect12-intro-to-sql.pptx  _quarto.yml  index.qmd  lect01-welcome-to-cmsc508.qmd  lect01-welcome-to-cmsc508.quarto_ipynb  lect02-entity-relation-models-1.qmd  lect04-ddl-dml-sqllite-mysql.qmd  lect05-relational-models.html  lect05-relational-models.ipynb  lect05-relational-models.qmd  lect05-relational-models.quarto_ipynb  lect06-relational-algebra-1.qmd  lect06a-Relational-Algebra.pptx  lect07-relational-algebra-2.qmd  lect14-sql-create-insert-delete-update.qmd  lect15-sql-toolset.qmd  lect16-intro-to-joins.qmd  lect17-joins-and-aggregates.qmd  lect20-writing-apis.qmd  lect21-referential-integrity-1.qmd  lect23-procedures-and-triggers-1.qmd  lect24-procedures-and-triggers-2.qmd  old-lectures.scss  pyproject.toml  styles.css
fa2023/lectures/assets/: HR.sql  lectures.scss  project-bookfinder.html  project-fitness.html
fa2023/lectures/src/: cmsc_canvas_tools-0.3.0-py3-none-any.whl  utils.py
fa2024/: .cnvsapi  README.md  references.md
fa2025/: .cnvsapi  opening-notes.qmd  references.qmd
guide/: _about_for_475.qmd  _quarto.yml  about.qmd  guide.css  index.qmd  test.qmd
helpers/: cnvsapi-0.5.3-py3-none-any.whl  cnvsapi-0.5.4-py3-none-any.whl  cnvsapi-0.5.5-py3-none-any.whl  cnvsapi-0.5.7-py3-none-any.whl  cnvsapi-0.5.8-py3-none-any.whl  cnvsapi-0.6.0-py3-none-any.whl  cnvsapi-0.6.1-py3-none-any.whl  cnvsapi-0.6.2-py3-none-any.whl  cnvsapi-0.7.0-py3-none-any.whl  cnvsapi-0.7.1-py3-none-any.whl  cnvsapi-0.7.10-py3-none-any.whl  cnvsapi-0.7.11-py3-none-any.whl  cnvsapi-0.7.2-py3-none-any.whl  cnvsapi-0.7.3-py3-none-any.whl  cnvsapi-0.7.4-py3-none-any.whl  cnvsapi-0.7.5-py3-none-any.whl  cnvsapi-0.7.6-py3-none-any.whl  cnvsapi-0.7.7-py3-none-any.whl  cnvsapi-0.7.9-py3-none-any.whl  cnvsapi-0.8.0-py3-none-any.whl  cnvsapi-0.8.1-py3-none-any.whl  cnvsapi-0.8.2-py3-none-any.whl  cnvsapi-0.9.0-py3-none-any.whl  cnvsapi-0.9.10-py3-none-any.whl  cnvsapi-0.9.11-py3-none-any.whl  cnvsapi-0.9.12-py3-none-any.whl  cnvsapi-0.9.13-py3-none-any.whl  cnvsapi-0.9.14-py3-none-any.whl  cnvsapi-0.9.15-py3-none-any.whl  cnvsapi-0.9.16-py3-none-any.whl  cnvsapi-0.9.17-py3-none-any.whl  cnvsapi-0.9.18-py3-none-any.whl  cnvsapi-0.9.19-py3-none-any.whl  cnvsapi-0.9.2-py3-none-any.whl  cnvsapi-0.9.20-py3-none-any.whl  cnvsapi-0.9.21-py3-none-any.whl  cnvsapi-0.9.22-py3-none-any.whl  cnvsapi-0.9.23-py3-none-any.whl  cnvsapi-0.9.24-py3-none-any.whl  cnvsapi-0.9.25-py3-none-any.whl  (+29 more)
homeworks/: Makefile  README.md  mygh.py
sp2025/: .cnvsapi  Makefile  _sample.qmd  _sample1.qmd  _test1.qmd  final-notes.html  final-notes.qmd  test.html  test.qmd  test1.html  test1.qmd
topics/: README.md  _a-quick-review-of-last-time.qmd  _admin-assignment-deadline-sp2025.qmd  _admin-work-session-in-class.qmd  _advanced-concepts.qmd  _analysis-and-normal-forms.qmd  _and-now-back-to-our-regularly-scheduled-program.qmd  _basic-operations.qmd  _bcnf-terms-and-definitions.qmd  _best-practices.qmd  _brief-intro-to-relational-model.qmd  _catching-our-collective-breaths-and-taking-stock.qmd  _cmsc408-overview-fa2025.qmd  _cmsc408-overview-sp2025.qmd  _cmsc408-overview.html  _cmsc408-overview.qmd  _common-table-expressions.qmd  _connecting-to-dbms.qmd  _course-summary-and-closing-thoughts.qmd  _creating-and-populating-tables.qmd  _creating-and-using-a-database.qmd  _database-design-process.qmd  (+297 more)
(+865 files in other folders)
