[tool.poetry]
name = "cmsc408-course-admin"
version = "0.1.0"
description = ""
authors = ["John Leonard <jdleonard@vcu.edu>"]
readme = "README.md"
package-mode = false 

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
matplotlib = "^3.9.1"
plotly = "^5.23.0"
ipython = "^8.14.0"
tabulate = "^0.9.0"
gspread = "^5.10.0"
oauth2client = "^4.1.3"
pandas = "^2.0.3"
numpy = "^1.25.2"
loguru = "^0.7.0"
python-frontmatter = "^1.0.0"
cnvsapi = {path = "./helpers/cnvsapi-0.5.3-py3-none-any.whl"}
tasl = {path = "./helpers/tasl-0.1.2-py3-none-any.whl"}
nbformat = "^5.9.2"
matplotlib-venn = "^0.11.9"
revealjs = "^0.2.10"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.22"
pymysql = "^1.1.0"
text2qti = "^0.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
