[tool.poetry]
name = "cmsc408-course-admin"
version = "0.2.3"
description = ""
authors = ["John Leonard <jdleonard@vcu.edu>"]
readme = "README.md"
package-mode = false 

[tool.poetry.dependencies]
python = "^3.13"
jupyter = "^1.0.0"
matplotlib = "^3.8.2"
plotly = "^5.23.0"
ipython = "^8.14.0"
tabulate = "^0.9.0"
gspread = "^5.10.0"
oauth2client = "^4.1.3"
pandas = "^2.0.3"
numpy = "^2.1.0"
loguru = "^0.7.0"
python-frontmatter = "^1.0.0"
cnvsapi = {path = "./helpers/cnvsapi-0.9.10-py3-none-any.whl"}
tasl = {path = "./helpers/tasl-0.2.5-py3-none-any.whl"}
nbformat = "^5.9.2"
matplotlib-venn = "^0.11.9"
revealjs = "^0.2.10"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.22"
pymysql = "^1.1.0"
text2qti = "^0.7.1"
cryptography = "^43.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
