[tool.poetry]
name = "lectures"
version = "0.1.0"
description = ""
authors = ["John Leonard <jdleonard@vcu.edu>"]
readme = "README.md"
package-mode = false 

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
ipython = "^8.14.0"
tabulate = "^0.9.0"
gspread = "^5.10.0"
oauth2client = "^4.1.3"
pandas = "^2.0.3"
numpy = "^1.25.2"
loguru = "^0.7.0"
python-frontmatter = "^1.0.0"
cnvsapi = {path = "../../helpers/cnvsapi-0.7.9-py3-none-any.whl"}
jupyter = "^1.0.0"
nbformat = "^5.9.2"
matplotlib = "^3.8.0"
matplotlib-venn = "^0.11.9"
revealjs = "^0.2.10"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.22"
pymysql = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
